Added proper parameter update implementation to websockets context.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -9,6 +9,7 @@ set(
     object.cpp
     object_dictionary.cpp
     object_visitor.cpp
+    update_container.cpp
 )
 
 # Standard DeCoF2 core library
