Added Boost.Asio executor implementation.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,16 +1,22 @@
 add_executable(
     decof2-example
     EXCLUDE_FROM_ALL
-    main.cpp
+    application.cpp
+    application.h
+    background_worker.cpp
+    background_worker.h
     composite.cpp
     composite.h
+    main.cpp
 )
 
 target_link_libraries(
     decof2-example
+    decof2-asio-executor
     decof2-asio-tick
     decof2-cli
     decof2-scgi
+    ${Boost_THREAD_LIBRARY}
 )
 
 if(CMAKE_COMPILER_IS_GNUCXX)
