--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(
     test_scgi_access.cpp
     test_scgi_response.cpp
     test_scgi_parser.cpp
+    test_type_conversion.cpp
     test_userlevels.cpp
     test_visitor.cpp
 )
