Replaced boost::any as internal generic type by a boost::variant based type.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -28,6 +28,7 @@ set(
     parser.h
     parser.ih
     parser_includes.h
+    parserbase.h
     pubsub_context.cpp
     scanner.flexc++
     scanner.h
