--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
   - sudo apt-get install g++-5 libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake python-pip
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
-  - sudo pip install cpp-coveralls
+  - sudo pip install -U cpp-coveralls
 
 before_script:
   - mkdir build && cd build
