--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,19 @@ language: cpp
 compiler:
   - gcc
 
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-5
+    
 before_install:
   - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # for g++ >= 5.0
   - sudo apt-get update
 
 install:
-  - sudo apt-get install g++-5 libboost-system1.58-dev libboost-test1.58-dev cmake-data cmake python-pip
+  - sudo apt-get install libboost-system1.58-dev libboost-test1.58-dev libboost-thread1.58-dev cmake-data cmake python-pip
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   - sudo pip install cpp-coveralls
 
