--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - sudo apt-get update
 
 install:
-  - sudo apt-get install libboost-system1.58-dev libboost-test1.58-dev libboost-thread1.58-dev cmake-data cmake python-pip
+  - sudo apt-get install libboost-system1.58-dev libboost-test1.58-dev libboost-thread1.58-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   - sudo pip install cpp-coveralls
 
