--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,13 @@ addons:
     packages:
     - g++-5
     
-before_install:
-  - sudo add-apt-repository -y ppa:kojoley/boost # for boost >= 1.56
-  - sudo apt-get update
-
 install:
-  - sudo apt-get install libboost-system1.58-dev libboost-test1.58-dev libboost-thread1.58-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
-  - sudo pip install cpp-coveralls
+  - sudo pip install conan cpp-coveralls
 
 before_script:
   - mkdir build && cd build
+  - conan install ..
 
 script:
   - cmake .. && make -j`nproc` decof2-example decof2-test && test/decof2-test
