--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-5
+    - python3-pip g++-5
     
 install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
-  - sudo pip install conan cpp-coveralls
+  - sudo pip install cpp-coveralls
+  - sudo pip3 install conan
 
 before_script:
   - mkdir build && cd build
