Refactored client_context into two separate classes, one without Boost dependency.

--- a/include/decof/client_context/CMakeLists.txt
+++ b/include/decof/client_context/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_custom_target(
     decof2-client_context-headers
     SOURCES
+        basic_client_context.h
         client_context.h
         generic_tcp_server.h
 )
