Quarried out decof2-microcore library (w/o Boost dependency) from decof2-core.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - mkdir build
 
 script:
-  - (cd build && CC=gcc-7 CXX=g++-7 cmake .. && make -j`nproc` decof2-example decof2-test && test/decof2-test)
+  - (cd build && CC=gcc-7 CXX=g++-7 cmake -DDECOF2_COMPILE_WITH_COVERAGE=1 .. && make -j`nproc` decof2-example decof2-test && test/decof2-test)
 
 after_success:
   - coveralls --include src --include include --gcov-options '\-lp'
